# lc-self-interpreter

./: .gitignore  configure.sh  lc-self-interpreter.opam
.github/workflows/: test.yaml
src/: Bool.v  CNum.v  Combinators.v  Interpreter.v  LC.v  Tuple.v
src/Util/: Fin.v  Star.v  Vec.v
